<resources>
    <string name="app_name">csis3175-grp6-proj</string>
    <string name="mainPageAds">Ads</string>
    <string name="imgSplashDescription">Splash Screen</string>
    <string name="txtUserName">Jamie Lee</string>
    <string name="txtUserEmail">Email:</string>
    <string name="txtBirthday">Birthday:</string>
    <string name="txtBirthdayInfo">1992-08-09</string>
    <string name="txtBeActivePass">Be Active Pass Holder:</string>
    <string name="txtBeActivePassNumber">Pass Number:</string>
    <string name="txtBtnLogOut">Log Out</string>
    <string name="txtBeActivePassYesOrNo">Yes</string>
    <string name="txtActivePassNumber">A123456</string>
    <string name="txtCredits">Credits:</string>
    <string name="txtCreditsAmount">0 CAD</string>
    <string name="txtActivityName">Table Tennis</string>
    <string name="txtActivityVenue">BON Multi-purpose Room 4/5</string>
    <string name="txtDateAndTime">Oct 31, 2023 Tue 8:30 AM - 10:30 AM</string>
    <string name="txtReviewBookingName">Activity Name</string>
    <string name="txtReviewBookingLocation">Location</string>
    <string name="txtBookingCenter">Center</string>
    <string name="txtBookingFacility">Facility</string>
    <string name="txtBtnCancellation">Cancel This Booking</string>
    <string name="txtReviewBookingNameInfo">Table Tennis</string>
    <string name="txtReviewBookingDateInfo">Oct 30, 2023</string>
    <string name="txtReviewBookingTimeInfo">Mon 9:30 AM - 10:15 AM</string>
    <string name="txtReviewBookingCenterInfo">Bonsor Recreation Complex (BON)</string>
    <string name="txtReviewBookingFacilityInfo">BON Multi-purpose Room 4/5</string>
    <string name="txtBookingConTitle">Booking Confirmation</string>
    <string name="txtBookingConBtn">Confirm Booking</string>
    <string name="txtBookingConActivity">Activity</string>
    <string name="txtBookingConTime">Time</string>
    <string name="txtBookingConLocation">Location</string>
    <string name="txtBookingConConBooking">Confirm Booking</string>
    <string name="txtBookingConTopic">Topic</string>
    <string name="txtBookingConInfo">Information</string>
    <string name="txtLoginTitle">LOGIN</string>
    <string name="txtLoginUsername">E-mail</string>
    <string name="txtLoginPassword">Password</string>
    <string name="txtLoginNotMember">Not a member yet?</string>
    <string name="txtLoginRegister">Click here to register</string>
    <string name="txtRegisterTitle">Register</string>
    <string name="txtRegisterEmail">Email address</string>
    <string name="txtRegisterFirstN">First name</string>
    <string name="txtRegisterLastN">Last name</string>
    <string name="txtRegisterDOB">Date of Birth (DD-MM-YYYY) </string>
    <string name="txtRegisterPassword">Password</string>
    <string name="txtRegisterConPassword">Confirm password</string>
    <string name="txtRegisterBurnaby">Are you a Burnaby Resident?</string>
    <string name="txtRegisterBActivePass">I have a Be Active Pass</string>
    <string name="txtRegisterBActivePassNum">Be Active Pass Number</string>
    <string name="txtLoginBtn">Log In</string>
    <string name="txtDateDOB">Jan 01 2020</string>
    <string name="txtUpcoming">Upcoming</string>
    <string name="txtHistory">History</string>
    <string name="txtCancelled">Cancelled</string>
    <string name="txtBackButton">&lt; Back</string>
    <string name="cancelBookingDialogMsg">Cancel this booking?</string>
    <string name="cancelBookingDialogYesBtnTxt">Yes</string>
    <string name="cancelBookingDialogNoBtnTxt">No</string>
    <string name="txtEmailAddress">xxx@gmail.com</string>
    <string name="txtModeOfPayment">Payment Mode</string>
    <string name="txtModeOfPaymentInfo">CAD $3.99 Pay At Venue</string>
    <string name="txtBtnConfirmation">Confirm</string>
    <string name="msgErrorConfirmBook">Error in booking. Please try again later.</string>
    <string name="msgSuccessConfirmBook">Booking successful.</string>
    <string name="txtBtnNext">Next</string>
</resources>