<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BookingReviewActivity">

    <Button
        android:id="@+id/btnBackMyBooking"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="70dp"
        android:layout_height="36dp"
        android:text="@string/txtBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgViewBookingReviewActivityLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/table_tennis" />

    <TextView
        android:id="@+id/txtViewReviewBookingName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtReviewBookingName"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBookingReviewActivityLogo" />

    <TextView
        android:id="@+id/txtViewReviewBookingNameInfo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtReviewBookingNameInfo"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBookingReviewActivityLogo" />

    <TextView
        android:id="@+id/txtViewReviewBookingDateInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtReviewBookingDateInfo"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingNameInfo" />

    <TextView
        android:id="@+id/txtViewReviewBookingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtReviewBookingLocation"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewTime" />


    <TextView
        android:id="@+id/txtViewReviewBookingTimeInfo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtReviewBookingTimeInfo"
        android:textAlignment="viewEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingDateInfo" />

    <TextView
        android:id="@+id/txtViewReviewBookingFacilityInfo"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtReviewBookingFacilityInfo"
        android:textAlignment="viewEnd"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingCenterInfo" />

    <TextView
        android:id="@+id/txtViewReviewBookingCenterInfo"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtReviewBookingCenterInfo"
        android:textAlignment="viewEnd"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingLocation" />

    <TextView
        android:id="@+id/txtViewBookingFacility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtBookingFacility"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBookingCenter" />

    <TextView
        android:id="@+id/txtViewBookingCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtBookingCenter"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingLocation" />

    <TextView
        android:id="@+id/txtViewModeOfPaymentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txtModeOfPaymentInfo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingFacilityInfo" />

    <ImageView
        android:id="@+id/imgViewBookingDate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReviewBookingName"
        app:srcCompat="@drawable/date_icon" />

    <ImageView
        android:id="@+id/imgViewTime"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewBookingDate"
        app:srcCompat="@drawable/time_icon" />

    <TextView
        android:id="@+id/txtViewModeOfPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtModeOfPayment"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBookingFacility" />

    <Button
        android:id="@+id/buttonCancellation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#4ca1af"
        android:text="@string/txtBtnCancellation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBookingFacility" />
</androidx.constraintlayout.widget.ConstraintLayout>