<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <ImageView
        android:id="@+id/imgViewBookingLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/table_tennis" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtViewBookingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/txtActivityName" />

        <TextView
            android:id="@+id/txtViewBookingVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/txtActivityVenue" />

        <TextView
            android:id="@+id/txtViewBookingDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/txtDateAndTime" />
    </LinearLayout>

</LinearLayout>